[package]
authors = ["null-char <skp.frl@gmail.com>"]
edition = "2018"
name = "fxhashmap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = {version = "^1.1.0", default-features = false}

[dev-dependencies]
criterion = "^0.3.3"

[[bench]]
harness = false
name = "bench"
